# bird_tool_utils-rust

./: CHANGELOG.md  Cargo.toml  README.md  release.md
.claude/skills/rust-packaging/: SKILL.md
.claude/skills/rust-packaging/templates/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.snippet.toml  pre-commit  release.py  release.toml
.claude/skills/rust-packaging/templates/workflows/: build-setup.yml  ci.yml
scripts/: release.toml  release_rust.py
src/: clap_utils.rs  command.rs  external_command_checker.rs  lib.rs
