[package]
name = "bird_tool_utils"
version = "0.2.0"
authors = ["Ben Woodcroft <benjwoodcroft@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Microbial genomics utility functions"
homepage = "https://github.com/wwood/bird_tool_utils"
repository = "https://github.com/wwood/bird_tool_utils"
documentation = "https://github.com/wwood/bird_tool_utils"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
log = "0.4.*"
env_logger = "0.7.*"
version-compare = "0.0.10"
bird_tool_utils-man = "0.4.0"
tempfile = "3.*"
